objects/Summary_Group__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Summary Groups</relationshipLabel>
        <relationshipName>Summary_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Type__c</fullName>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substitute Discount</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_MarginP__c</fullName>
        <formula>IF((APTS_Total_Net_Sales_Price_Having_cost__c == 0), 0, (APTS_Margin__c / APTS_Total_Net_Sales_Price_Having_cost__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Margin__c</fullName>
        <formula>APTS_Total_Net_Sales_Price_Having_cost__c - APTS_Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Adj__c</fullName>
        <label>Net Adj. %</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Summary Groups</relationshipLabel>
        <relationshipName>Summary_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Related_Quotation_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; APTS_Proposal__r.Id,APTS_Proposal__r.APTS_Quotation_Number__c)</formula>
        <label>Related_Quotation_Number__c</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_List_Price__c</fullName>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Market_Price__c</fullName>
        <label>Total Market Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Net_Sales_Price_Having_cost__c</fullName>
        <label>Total Net Sales Price (Having cost)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Net_Sales_Price__c</fullName>
        <label>Total Net Sales Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <label>Summary Group</label>
    <nameField>
        <label>Summary Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summary Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>